saturn-program-macros/tests/compile_fail/private_handler.stderr
error: handler must be public (e.g. `pub fn name(..)`); private handlers are not visible to the generated dispatcher
  --> tests/compile_fail/private_handler.rs:25:8
   |
25 |     fn foo<'info>(
   |        ^^^

warning: unused import: `saturn_account_parser::Context`
 --> tests/compile_fail/private_handler.rs:5:5
  |
5 | use saturn_account_parser::Context;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
